...
    }


    private void mostraDialogPassword(Context context, ListQuizDTO quiz) {
        AlertDialog.Builder builder = new AlertDialog.Builder(context);
        builder.setTitle("Quiz Protetto");
        builder.setMessage("Inserisci la password per iniziare:");

        // Creiamo un EditText dinamicamente
        final android.widget.EditText input = new android.widget.EditText(context);

        input.setId(R.id.input_password_per_quiz);
        input.setInputType(android.text.InputType.TYPE_CLASS_TEXT | android.text.InputType.TYPE_TEXT_VARIATION_PASSWORD);        builder.setView(input);

        builder.setPositiveButton("Entra", (dialog, which) -> {
            String passwordInserita = input.getText().toString();
            avviaGioco(context, quiz.getId(), passwordInserita);
        });

        builder.setNegativeButton("Annulla", (dialog, which) -> dialog.cancel());
        builder.show();
...
