...
        android:background="#F0F0F0"
        app:layout_constraintTop_toBottomOf="@id/header_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/menu_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@android:drawable/ic_menu_sort_by_size"
        android:padding="5dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
...
        <View android:layout_width="match_parent" android:layout_height="1dp" android:background="#000000"/>

        <TextView
            android:id="@+id/menu_visualizza_quiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Visualizza quiz"
            android:textColor="#000000"
            android:padding="12dp"
            android:background="#B0B0B0"
            android:gravity="center_vertical"/>

        <View android:layout_width="match_parent" android:layout_height="1dp" android:background="#000000"/>
...
