...
            @Override
            public void onResponse(Call<List<domandaDTO>> call, Response<List<domandaDTO>> r) {
                if (r.isSuccessful() && r.body() != null) {
                    listaDomande.addAll(r.body());
                    mostraDomanda();
                } else {
                    Toast.makeText(QuizGameActivity.this, "Password errata o errore caricamento", Toast.LENGTH_SHORT).show();
                    finish();
                }
            }
            @Override
            public void onFailure(Call<List<domandaDTO>> call, Throwable t) {
                finish();
...
    }

    private void mostraDialogRisultato(int punteggio) {

        // qui mi viene mosotrato il possibile risultato
        AlertDialog.Builder builder = new AlertDialog.Builder(this);
        builder.setTitle("Quiz Completato!");
        builder.setMessage("Hai totalizzato: " + punteggio + " punti.");
        builder.setCancelable(false);
        builder.setPositiveButton("Torna alla Home", (dialog, which) -> {
            Toast.makeText(QuizGameActivity.this, "Quiz Completato!", Toast.LENGTH_SHORT).show();
            Intent intent = new Intent(QuizGameActivity.this, HomeActivity.class);
            intent.putExtra("token", userToken);
...
