appId: com.example.quizzy
---
- launchApp:
    clearState: false

- tapOn:
    id: "username"
- inputText: "B9"

- tapOn:
    id: "password"
- inputText: "Bombo99!"

- tapOn: 
    id: "login_link"


- assertVisible: "Credenziali errate"