appId: com.example.quizzy
---
- launchApp:
    clearState: false 

- tapOn:
    id: "username"
- inputText: "Bo99"

- tapOn:
    id: "password"
- inputText: "Bombo99!"

- tapOn: 
    id: "login_link"


- tapOn:
    id: "menu_icon"

- tapOn: "Visualizza quiz"

- scroll

- tapOn: "Password@99"


- tapOn: "Inserisci la password per iniziare:"

- inputText: "Password@99"

- tapOn: "Entra"

- assertVisible:
    id: "text_quesito"

- tapOn: po

- tapOn: "Avanti"

- assertVisible:
    id: "text_quesito"

- tapOn: po

- tapOn: "Avanti"

- tapOn: "Fine"

- tapOn: SÌ, INVIA

- tapOn: TORNA ALLA HOME

- assertVisible: "Quiz Completato!"