appId: com.example.quizzy
---
- launchApp:
    clearState: false 

- tapOn:
    id: "username"
- inputText: "Bo99"

- tapOn:
    id: "password"
- inputText: "Bombo99!"

- tapOn: 
    id: "login_link"


- tapOn:
    id: "menu_icon"

- tapOn: "Visualizza quiz"

- scroll

- tapOn: "Il mio super Quiz"


- assertVisible:
    id: "text_quesito"

- tapOn: prova1

- tapOn: "Avanti"


- tapOn: "Fine"

- tapOn: SÌ, INVIA

- tapOn: TORNA ALLA HOME

- assertVisible: "Quiz Completato!"